tests/baselines/reference/stringLiteralsWithEqualityChecks01.errors.txt
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts(8,5): error TS2367: This condition will always return 'false' since the types '"foo"' and '"bar"' have no overlap.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts(9,5): error TS2367: This condition will always return 'false' since the types '"bar"' and '"foo"' have no overlap.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts(10,5): error TS2367: This condition will always return 'false' since the types '"foo"' and '"bar"' have no overlap.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts(17,5): error TS2367: This condition will always return 'true' since the types '"foo"' and '"bar"' have no overlap.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts(18,5): error TS2367: This condition will always return 'true' since the types '"bar"' and '"foo"' have no overlap.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts(19,5): error TS2367: This condition will always return 'true' since the types '"foo"' and '"bar"' have no overlap.


==== tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks01.ts (6 errors) ====
    let x: "foo";
    let y: "foo" | "bar";
    
    let b: boolean;
    b = x === y;
    b = "foo" === y
    b = y === "foo";
    b = "foo" === "bar";
        ~~~~~~~~~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types '"foo"' and '"bar"' have no overlap.
    b = "bar" === x;
        ~~~~~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types '"bar"' and '"foo"' have no overlap.
    b = x === "bar";
        ~~~~~~~~~~~
!!! error TS2367: This condition will always return 'false' since the types '"foo"' and '"bar"' have no overlap.
    b = y === "bar";
    b = "bar" === y;
    
    b = x !== y;
    b = "foo" !== y
    b = y !== "foo";
    b = "foo" !== "bar";
        ~~~~~~~~~~~~~~~
!!! error TS2367: This condition will always return 'true' since the types '"foo"' and '"bar"' have no overlap.
    b = "bar" !== x;
        ~~~~~~~~~~~
!!! error TS2367: This condition will always return 'true' since the types '"bar"' and '"foo"' have no overlap.
    b = x !== "bar";
        ~~~~~~~~~~~
!!! error TS2367: This condition will always return 'true' since the types '"foo"' and '"bar"' have no overlap.
    b = y !== "bar";
    b = "bar" !== y;
    
    